[project]
name = "pytrajlib"
version = "0.1.0"
description = "Simulate the flight of a ballistic missile"
readme = "README.md"
authors = [
    { name = "L.M. Arthur" },
    { name = "A.M. Decker" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "cibuildwheel>=2.23.2",
    "pytest>=8.3.5",
    "setuptools>=79.0.0",
]
jupyter = [
    "ipykernel>=6.29.5",
]

[project.scripts]
pytrajlib = "pytrajlib:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [ { name = "pytrajlib.mc", sources = ["src/main.c"], libraries = ["gsl"], include-dirs=["/opt/homebrew/include"], library-dirs=['/opt/homebrew/lib']} ]

[tool.cibuildwheel]
build = "cp310-*"

[tool.cibuildwheel.linux]
before-build = "yum install -y gsl-devel"
build = "cp310-manylinux_x86_64"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
before-build = "brew install gsl"
environment = {MACOSX_DEPLOYMENT_TARGET=14}

[tool.cibuildwheel.windows]
before-build = "mamba install -c conda-forge gsl"