[project]
name = "pytrajlib"
version = "0.1.0"
description = "Simulate the flight of a ballistic missile"
readme = "README.md"
authors = [
    { name = "L.M. Arthur" },
    { name = "A.M. Decker" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "cffi>=1.17.1",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "setuptools>=79.0.0",
]
jupyter = [
    "ipykernel>=6.29.5",
]

[project.scripts]
pytrajlib = "pytrajlib:cli"

[build-system]
requires = ["setuptools", "cffi"]
build-backend = "setuptools.build_meta"
